# sensorweb-firmware

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  build.sh  cc3200-serial.sh  config.mk  env.mk  flash.sh  parse-args.sh  run.sh
.cargo/: config
c-code/: Makefile
c-code/src/: IPCQueue.c  IPCQueue.h  Producer.h  Ptr.h  Task.c  Task.h  pinmux.h
microjson/: Cargo.toml
microjson/src/: json.rs  lib.rs
scripts/: travis.sh
sensorweb-sys/: Cargo.toml  build.rs  sensorweb.c
sensorweb-sys/src/: lib.rs
src/: ApplicationHooks.c  FormattedIO.c  FormattedIO.h  IPCQueue.c  IPCQueue.h  Makefile  Producer.c  Producer.h  Serial.c  Serial.h  Ticks.h  config.rs.sample  json_parser.rs  main.c  main.rs  rtc_task.rs  wlan.rs
